# griblib

./: README.md  pyproject.toml
griblib/: __init__.py
griblib/io/: accessors.py  mod_ascii.py
griblib/models/: arome.py  core.py  ecmwf.py  harmonie.py  infrasound.py
griblib/utils/: geo.py  plotting.py  sampling.py
notebooks/: 20220630 gravity wave analysis | CERRA specs along great circle path | model levels.ipynb  20220630 gravity wave analysis | CERRA wind and radar analysis.ipynb
notebooks/cerra/: api_request_20220630-00_ml.py  api_request_20220630-00_sfc.py  api_request_20220630-03_ml.py  api_request_20220630-03_sfc.py
scripts/: compute_geopotential_on_ecmwf_levels.py  grib2profile.py  haiti_ecmwf_1d.py
scripts/ECMWF/: test_ecmwf_1d.py  test_ecmwf_gcp_slice.py
scripts/HARMONIE/: HARMONIE_microbarometer_specs.py  test_harm_1d.py  test_harm_gcp_slice.py
